# min_inferara

./: README.md  dune-project  min_inferara.opam
.github/workflows/: ocaml-ci.yml
lib/: ast.ml  common.ml  dune  lexer.mll  min_inferara.ml  parser.mly
test/sample/: demo.inf  min1.inf
